<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.13">
  <POU Name="FB_XV03_DiagnosisParser" Id="{f4426962-01dd-05e0-16bd-b53d50f53602}" SpecialFunc="None">
    <Declaration><![CDATA[FUNCTION_BLOCK FB_XV03_DiagnosisParser
VAR_INPUT
END_VAR
VAR_OUTPUT
END_VAR
VAR
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[]]></ST>
    </Implementation>
    <Method Name="OpenCoils" Id="{6aa9d4b9-a3d6-0026-2c8f-87ba07b8fff8}">
      <Declaration><![CDATA[METHOD OpenCoils : ARRAY[1..8] OF BOOL
VAR_INPUT
	coils	: USINT;
END_VAR
VAR
	
END_VAR]]></Declaration>
      <Implementation>
        <ST><![CDATA[OpenCoils[1] := coils.0;
OpenCoils[2] := coils.1;
OpenCoils[3] := coils.2;
OpenCoils[4] := coils.3;
OpenCoils[5] := coils.4;
OpenCoils[6] := coils.5;
OpenCoils[7] := coils.6;
OpenCoils[8] := coils.7;]]></ST>
      </Implementation>
    </Method>
    <Method Name="PerformanceDiagnosis" Id="{1244ce72-5353-051d-0405-ed01eb7352a3}">
      <Declaration><![CDATA[METHOD PerformanceDiagnosis : REFERENCE TO ST_XV03_PerformanceDiagnosis;
VAR_INPUT
	Value	: USINT;
END_VAR
VAR_INST
	stPerformanceDiagnosis	: ST_XV03_PerformanceDiagnosis;
END_VAR
VAR
	ptr2ndByte	: POINTER TO BYTE;
END_VAR
]]></Declaration>
      <Implementation>
        <ST><![CDATA[// 2nd byte is performance diagnosis.
ptr2ndByte := ADR(VALUE) + SIZEOF(BYTE);
stPerformanceDiagnosis.UL_UV_UNDERRNAGE_OR_UL_OV_OVERRANGE := ptr2ndByte^.0;
stPerformanceDiagnosis.UA_OVERRANGE := ptr2ndByte^.1;
stPerformanceDiagnosis.OPEN_LOAD_AT_VALVE_COIL := ptr2ndByte^.2;
stPerformanceDiagnosis.SHORT_CIRCUIT_AT_VALVE_COIL := ptr2ndByte^.3;
stPerformanceDiagnosis.HWE := ptr2ndByte^.4;]]></ST>
      </Implementation>
    </Method>
  </POU>
</TcPlcObject>